--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,10 +2,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 30px 30px 0 25px;
+  padding: 30px;
+  margin-bottom: 70px;
 
   @media (min-width: 601px) {
-    margin: 30px 50px 0 50px;
+    margin: 0 auto;
+    padding: 10px 20px 50px 20px;
+    max-width: 1440px;
   }
 }
 
