--- a/src/index.scss
+++ b/src/index.scss
@@ -6,10 +6,17 @@ body {
   letter-spacing: 2px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1440px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+  margin: 0;
+}
+
+button {
+  padding: 0;
 }
